removal of unnecessary swagger tags and resulting unnecessary code
